--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ body{
     color: #FFFFFF;
     height: 60px;
     padding: 10px;
+    padding-left: 5px;
     width: 120px;
     border-radius: 10px;
     font-size: 20px;
@@ -94,13 +95,14 @@ select, input:focus{
 }
 
 .list-todos{
-    min-height: 300px;
+    height: 300px;
     width: 100%;
     display: flex;
     flex-direction: column;
     gap: 20px;
     padding: 0px;
     margin-top: 30px;
+    overflow-y: auto;
 }
 
 .list-element{
@@ -116,8 +118,8 @@ select, input:focus{
     gap: 20px;
     opacity: 0;
     transform: translateY(-10px);
-    transition: all 1s ease; 
-    
+    transition: all 1s ease;  
+    flex-shrink: 0;  
 }
 
 .list-element.todo-enter{
@@ -156,7 +158,7 @@ select, input:focus{
 .input-text{
     width: 80%;
     height: 30px;
-    font-size: 30px;
+    font-size: 27px;
     color:rgb(61, 61, 61);
     border: 0px;
 
@@ -293,8 +295,8 @@ li.checked{
     }
 
     .input-check{
-        height: 24px;
-        width: 24px;
+        height: 25px;
+        width: 25px;
         
     }
 
@@ -360,8 +362,26 @@ li.checked{
 
     .input-check{
         height: 18px;
-        width: 18px;
-        
+        width: 18px; 
+        cursor: pointer;
+        appearance: none;
+        border: 2px solid rgb(61, 61, 61);
+        border-radius: 5px;
+        background-color: #FFFFFF;
+    }
+
+    .input-check:checked{
+        background-color: rgb(61, 61, 61);
+        color: #FFFFFF;
+    }
+
+    .input-check:checked::after{
+        content: "\2714";
+        color: #FFFFFF;
+        font-size: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     .input-text{
