--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 *{
     box-sizing: border-box;
+    padding: 0;
 }
 
 html, body{
@@ -58,8 +59,13 @@ body{
 }
 
 .sorting-selector{
-    background-color:rgb(61, 61, 61) ;
-    color: #FFFFFF;
+    
+    color:  rgb(61, 61, 61);
+    background-color: #FFFFFF;
+    background-image: url("assets/down.png");
+    background-repeat: no-repeat; 
+    background-position: right 10px center; 
+    background-size: 20px;
     height: 60px;
     padding: 10px;
     padding-left: 5px;
@@ -67,6 +73,7 @@ body{
     border-radius: 10px;
     font-size: 20px;
     cursor: pointer;
+    appearance: none;
 }
 
 select, input:focus{
@@ -215,6 +222,7 @@ li.checked{
         padding: 10px;
         width: 120px;
         font-size: 20px;
+
     }
 
     .add-todo-button{
@@ -280,6 +288,8 @@ li.checked{
         padding: 10px;
         width:120px;
         font-size: 17px;
+        background-position: right 10px center; 
+        background-size: 14px;
     }
 
     .add-todo-button{
@@ -344,8 +354,11 @@ li.checked{
     .sorting-selector{
         height: 30px;
         padding: 5px;
+        padding-left: 10px;
         width:80px;
         font-size: 12px;
+        background-position: right 10px center; 
+        background-size: 14px;
     }
 
     .add-todo-button{
@@ -387,8 +400,7 @@ li.checked{
     .input-text{
         width: 80%;
         height: 20px;
-        font-size: 15px;
-
+        font-size: 13px;
     }
 
     .delete-button{
